#61 [fix] display collapse fixed

--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -18,11 +18,3 @@
   align-items: center;
   height: 100%;
 }
-
-.NavbarButtonActiveParent {
-  width: 6rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
